# aws-ec2-monitor

./: CHANGELOG  LICENSE  Makefile  README  README.md  requirements.txt  setup.cfg
app/: __init__.py  logging.py  monitor.py  packet_processor.py  scanner.py  sniffer.py  terminator.py
app/tests/: test_logging.py  test_scanner.py  test_terminator.py
