[metadata]
name = aws-monitor
version = attr: app.VERSION
description = This tool is used for tracking the internet packets that comes to the machine.
long_description = file: README.md, CHANGELOG, LICENSE
keywords = packet, sniffer
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    boto3
    importlib-metadata; python_version<"3.8"

[options.package_data]
* = *.txt, *.rst
hello = *.msg

[options.entry_points]
console_scripts =
    aws-monitor = app:start

[options.extras_require]
pdf = ReportLab>=1.2; RXP
rest = docutils>=0.3; pack ==1.1, ==1.3

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    app.tests*